<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="20dp"
    android:background="#ffffff"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#cbcbcb" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4" >

        <TextView
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="#C0C0C0" />

        <Button
            android:id="@+id/fast_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffffff"
            android:singleLine="true"
            android:text="@string/fast1"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="#C0C0C0" />

        <Button
            android:id="@+id/fast_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffffff"
            android:singleLine="true"
            android:text="@string/fast2"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="#C0C0C0" />

        <Button
            android:id="@+id/fast_3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffffff"
            android:singleLine="true"
            android:text="@string/fast3"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="#C0C0C0" />

        <Button
            android:id="@+id/fast_4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffffff"
            android:singleLine="true"
            android:text="@string/fast4"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="#C0C0C0" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#cbcbcb" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4" >

        <TextView
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="#C0C0C0" />

        <Button
            android:id="@+id/fast_5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffffff"
            android:singleLine="true"
            android:text="@string/fast5"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="#C0C0C0" />

        <Button
            android:id="@+id/fast_6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffffff"
            android:singleLine="true"
            android:text="@string/fast6"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="#C0C0C0" />

        <Button
            android:id="@+id/fast_7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffffff"
            android:singleLine="true"
            android:text="@string/fast7"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="#C0C0C0" />

        <Button
            android:id="@+id/fast_8"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffffff"
            android:singleLine="true"
            android:text="@string/fast8"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="#C0C0C0" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#cbcbcb" />

</LinearLayout>