<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/popup_item_focus" >

    <TextView
        android:id="@+id/pop_parking"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/popup_item_selector"
        android:drawableLeft="@drawable/parking"
        android:drawableStart="@drawable/parking"
        android:gravity="center_vertical"
        android:padding="4dp"
        android:text="@string/parking"
        android:textColor="#ffffffff"
        android:textSize="12sp" />

    <View
        android:layout_width="0.5dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:background="#ff000000" />

    <TextView
        android:id="@+id/pop_f1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/popup_item_selector"
        android:drawableLeft="@drawable/plane"
        android:drawableStart="@drawable/plane"
        android:gravity="center_vertical"
        android:padding="4dp"
        android:text="@string/first_floor"
        android:textColor="#ffffffff"
        android:textSize="12sp" />

    <View
        android:layout_width="0.5dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:background="#ff000000" />

    <TextView
        android:id="@+id/pop_f2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/popup_item_selector"
        android:drawableLeft="@drawable/plane"
        android:drawableStart="@drawable/plane"
        android:gravity="center_vertical"
        android:padding="4dp"
        android:text="@string/second_floor"
        android:textColor="#ffffffff"
        android:textSize="12sp" />

</LinearLayout>